@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: ????
+  Bugfixes:
+    - Now has a pcall so it should just log an error instead of halting startup
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 2024-05-17
